apps/staging/keycloak/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
spec:
  tls:
    - hosts:
        - "keycloak.shoplist.staging.lazebny.io"
        - "keycloak-admin.shoplist.staging.lazebny.io"
      secretName: certificate-tls
  rules:
    - host: "keycloak.shoplist.staging.lazebny.io"
      http:
        paths:
          - backend:
              service:
                name: keycloak-service
                port:
                  number: 8443
            pathType: ImplementationSpecific
            path: /
    - host: "keycloak-admin.shoplist.staging.lazebny.io"
      http:
        paths:
          - backend:
              service:
                name: keycloak-service
                port:
                  number: 9000
            pathType: ImplementationSpecific
